[tool.pyright]
venvPath = "."
typeCheckingMode = "standard"

[build-system]
requires = ["setuptools", "wheel", "basedpyright"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project]
name = "MLP"
version = "0.1.0"
description = "A sample project"
readme = "README.md"
authors = [
{ name = "Gabriel Fruet" },
]

dependencies = [
    "numpy",
    "jax[cuda12]",
    "keras",
    "tqdm",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "scienceplots>=2.1.1",
]
